<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#ffff0000"
        android:textColor="#ffffffff"
        android:text="@string/Calculator"
        android:gravity="center_horizontal"
        android:textStyle="bold"
        android:padding="10dp"/>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Number1"
            android:textSize="18sp"/>

        <EditText
            android:id="@+id/etNum1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:layout_marginLeft="5dp" />

    </LinearLayout>

    <RadioGroup
        android:id="@+id/rgOperator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/rbAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add"
            android:textSize="30sp"/>

        <RadioButton
            android:id="@+id/rbSub"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/subtract"
            android:textSize="30sp"
            android:checked="false" />

        <RadioButton
            android:id="@+id/rbMul"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/multiple"
            android:textSize="30sp"
            android:checked="false" />

        <RadioButton
            android:id="@+id/rbDiv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/divide"
            android:textSize="30sp"
            android:checked="false" />

    </RadioGroup>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Number2"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/etNum2"
            android:layout_width="293dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:layout_marginLeft="5dp" />

    </LinearLayout>

    <Button
        android:id="@+id/btnCalculate"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:text="@string/Compute"
        android:onClick="btnCalculateOnClick" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Answer"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/tvAnswer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_marginLeft="5dp" />

    </LinearLayout>

</LinearLayout>
